Add spm support

--- a/examples/origin.html
+++ b/examples/origin.html
@@ -13,7 +13,7 @@
 		.map { height: 100% }
 	</style>
 	<!--Fork Me on Github ribbon, we're using the awsome version from simonwhitaker available at https://github.com/simonwhitaker/github-fork-ribbon-css  -->
-	<link rel="stylesheet" href="css/gh-fork-ribbon.css" />
+	<link rel="stylesheet" href="../css/gh-fork-ribbon.css" />
 	<!--[if IE]>
 		<link rel="stylesheet" href="css/gh-fork-ribbon.ie.css" />
 	<![endif]-->
@@ -27,7 +27,7 @@
 	<div id="map" class="map"></div>
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet-src.js"></script>
-	<script src="leaflet-providers.js"></script>
+	<script src="../leaflet-providers.js"></script>
 	<script>
 		var map = L.map('map', {
 			center: [48, -3],
